--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,7 @@
 
 body {
   padding-top: 70px; /* Move down content because we have a fixed navbar that is 50px tall */
+  font-family: 'Lato', sans-serif; font-weight:400; font-style:italic;
 }
 
 .footer {
@@ -41,4 +42,10 @@ body {
 
 .whitecolor {
 	color: white;
+}
+
+/* Mansory */
+.mansory-item {
+	padding: 5px;
+	width: 50%;
 }
