a lot of stuff mainly footer, google maps

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,12 +4,14 @@
 
 body {
   padding-top: 70px; /* Move down content because we have a fixed navbar that is 50px tall */
-  font-family: 'Lato', sans-serif; font-weight:400; font-style:italic;
+  font-family: 'Lato', sans-serif; font-weight:400; font-style:italic; /* super global font */
 }
 
 .footer {
-	position: relative;
-  	padding-bottom: 20px;
+	margin-top: 10px; /* isolates a bit more from the rest */
+	padding: 50px 0px; /* make foot stands clearer */
+	background-color: #f5f5f5;
+	bottom: 0px; /* stick at the bottom of the page */
 }
 
 /* transparent navbar */
@@ -48,4 +50,10 @@ body {
 .mansory-item {
 	padding: 5px;
 	width: 50%;
+}
+
+/* Embedded google maps */
+#map-canvas {
+    width: 500px;
+    height: 400px;
 }
