--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,12 @@
 
 /* Navbar */
 .navbar {
-   padding: 10px 0px;
+   	padding: 10px 0px;
+}
+
+.nav.navbar-nav.navbar-right li a {
+	/*font-weight: bolder;
+    color: #F68248;*/
 }
 
 .navbar img {
@@ -23,6 +28,16 @@ body {
 	padding: 50px 0px; /* make foot stands clearer */
 	background-color: #f5f5f5;
 	bottom: 0px; /* stick at the bottom of the page */
+}
+
+/* sections */
+.firstsection {
+	background-color: #8AD0BF;
+	color: white;
+}
+
+.secondsection {
+	background-color: white;
 }
 
 /* video starter */
@@ -58,6 +73,10 @@ body {
 	width: 20%;	
 }
 
+#mansory-products .mansory-item {
+	width: 20%;	
+}
+
 /* Embedded google maps */
 #map-canvas {
     width: 500px;
@@ -66,6 +85,31 @@ body {
 
 /* Profile image */
 .profile img {
-	height: 400px;
+	height: 450px;
 	/*object-fit: contain;*/
+}
+
+/* Thank you */
+.thankyou {
+	/*font: normal normal normal 116px/1.4em 'Fredericka the Great',fantasy;*/
+	font-family: 'Fredericka the Great', fantasy;
+	font-size: 116px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	line-height: normal;
+letter-spacing: normal;
+	/*color: #FFFFFF;*/
+}
+
+.thankyou span {
+	color: #F45830;
+}
+
+/* Funding */
+#funding {
+	background-image: url("../../../content/fond_SITE_1.png"); 
+  	/*background-size: 100% auto;*/
+  	background-repeat: no-repeat;
+  	background-size: 100% 500px;
 }
