--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,44 +1,44 @@
 <!-- Navigation -->
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			 <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">
-					<img src="static/img/logo.png">
-				</a>
-            </div>
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">
+				<img src="static/img/logo.png">
+			</a>
+        </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="about.html">Notre projet</a></li>
-					<li><a href="funding.html">Nous soutenir</a></li>
-					<li class="dropdown">
-			        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
-			        		<span class="caret"></span>
-			        	</a>
-			          	<ul class="dropdown-menu" role="menu">
-				            <li><a href="#">Ateliers</a></li>
-				            <li><a href="#">Formations</a></li>
-			          	</ul>
-			        </li>
-					<li class="dropdown">
-			        	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Communauté 
-			        		<span class="caret"></span>
-			        	</a>
-			          	<ul class="dropdown-menu" role="menu">
-				            <li><a href="#">Les créatifs</a></li>
-				           </ul>
-			        </li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="join.html">Inscription</a></li>
-				</ul>
-			</div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="{{ site.baseurl }}about.html">Notre projet</a></li>
+				<li><a href="funding.html">Nous soutenir</a></li>
+				<li class="dropdown">
+			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
+			        	<span class="caret"></span>
+			        </a>
+			        <ul class="dropdown-menu" role="menu">
+				        <li><a href="#">Ateliers</a></li>
+				        <li><a href="#">Formations</a></li>
+			        </ul>
+			    </li>
+				<li class="dropdown">
+			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Communauté 
+			        	<span class="caret"></span>
+			        </a>
+			        <ul class="dropdown-menu" role="menu">
+				        <li><a href="#">Les créatifs</a></li>
+				    </ul>
+			    </li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="join.html">Inscription</a></li>
+			</ul>
 		</div>
-	</nav>
+	</div>
+</nav>
