--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,7 +17,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html">Notre projet</a></li>
+				<li><a href="{{ site.baseurl }}about.html">Notre projet</a></li>
 				<li><a href="funding.html">Nous soutenir</a></li>
 				<li class="dropdown">
 			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
