--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,46 +1,44 @@
-<footer class="footer text-center">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-sm-12">
-    				<p class="lead"><strong>Créaphé</strong></p>
-    				<ul class="list-inline">
-						<li><p><strong><a href="blog.html">Blog</a></strong></p></li>
-						<li><p><strong><a href="blog.html">S'inscrire à la newsletter</a></strong></p></li>
-					</ul>
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+            	<div class="col-lg-8 col-lg-offset-2">
 					<ul class="list-inline">
-						<li><p><strong><a href="blog.html">Notre projet</a></strong></p></li>
-						<li><p><strong><a href="founding.html">Nous soutenir</a></strong></p></li>
-						<li><p><strong><a href="contact.html">Nous contacter</a></strong></p></li>
-						<li><p><strong><a href="join.html">Inscription</a></strong></p></li>
-						<li><p><strong><a href="thanks.html">Remerciements</a></strong></p></li>
+						<li><p><strong><a href="/project">Notre projet</a></strong></p></li>
+						<li><p><strong><a href="/">Nous soutenir</a></strong></p></li>
+                        <li><p><strong><a href="/">Blog</a></strong></p></li>
+						<li><p><strong><a href="/">Inscription</a></strong></p></li>
+                        <li><p><strong><a href="/contact">Nous contacter</a></strong></p></li>
 					</ul>
-					<!--<ul class="list-inline">
-						<li><p class="text-uppercase"><strong>Mentions légales</strong></p></li>
-						<li><p class="text-uppercase"><strong>Plan du site</strong></p></li>
-					</ul>-->
+            	</div>
+            </div>
+        </div>
+   	</div>
+   	<div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Créaphé 2015
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
-    				<hr/>
+<!-- jQuery -->
+<script src="/public/js/jquery.min.js"></script>
 
-    				<p class="lead"><strong>Rejoignez-nous sur</strong></p>
-    				<ul class="list-inline">
-    					<li><i class="fa fa-facebook-square fa-2x"></i></li>
-						<li><i class="fa fa-pinterest-square fa-2x"></i></li>
-						<li><i class="fa fa-instagram fa-2x"></i></li>
-					</ul>
-					<p class="text-muted"><small>© 2015 Créaphé, All rights reserved</small></p>
-    			</div>
-    		</div>
-      	</div>
-    </footer>
+<!-- Bootstrap Core JavaScript -->
+<script src="/public/js/bootstrap.min.js"></script>
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>-->
-    <script src='static/js/jquery.min.js'></script>
+
+   <!-- <script src='/public/js/jquery.min.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-	<script src='static/js/moment.min.js'></script>
-	<script src='static/js/fullcalendar.min.js'></script>
+	<script src='/public/js/moment.min.js'></script>
+	<script src='/public/js/fullcalendar.min.js'></script>
 
-	<script src="static/js/mansory.min.js"></script>
-	<script src="static/js/imagesloaded.min.js"></script>
-	<script src="static/js/holder.min.js"></script>
-	<script src="static/js/app.js"></script>
+	<script src="/public/js/mansory.min.js"></script>
+	<script src="/public/js/imagesloaded.min.js"></script>
+	<script src="/public/js/holder.min.js"></script>
+	<script src="/public/js/app.js"></script>-->
