--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title>Créaphé</title>
+  <title>{{page.title}}</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/bootstrap_flatly.min.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/font-awesome.min.css">
-  <link rel='stylesheet' href='{{ site.baseurl }}public/css/fullcalendar.min.css'/>
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/styles.css">
+  <link rel="stylesheet" href="/public/css/bootstrap_flatly.min.css">
+  <link rel="stylesheet" href="/public/css/font-awesome.min.css">
+  <link rel='stylesheet' href="/public/css/fullcalendar.min.css">
+  <link rel="stylesheet" href="/public/css/styles.css">
 
 </head>
