--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,30 +2,44 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">
-				<img src="static/img/logo.png">
+            <a class="navbar-brand" href="/">
+				<img src="/public/img/logo.png">
 			</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				{% for link in site.navigation %}
-			      {% if page.url == link.url %}
-			      <li class="active">
-			      {% else %}
-			      <li>
-			      {% endif %}
-			      	<a href="{{link.url}}">{{link.title}}</a>
-			      </li>
-			    {% endfor %}
+				<li><a href="/project">Notre projet</a></li>
+				<li><a href="/">Nous soutenir</a></li>
+				<li><a href="/">Blog</a></li>
+				<li><a href="/">Inscription</a></li>
+				<li><a href="/contact">Nous contacter</a></li>
+				<!--<li class="dropdown">
+			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
+			        	<span class="caret"></span>
+			        </a>
+			        <ul class="dropdown-menu" role="menu">
+				        <li><a href="#">Ateliers</a></li>
+				        <li><a href="#">Formations</a></li>
+			        </ul>
+			    </li>
+				<li class="dropdown">
+			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Communauté 
+			        	<span class="caret"></span>
+			        </a>
+			        <ul class="dropdown-menu" role="menu">
+				        <li><a href="#">Les créatifs</a></li>
+				    </ul>
+			    </li>
+				-->
 			</ul>
 		</div>
 	</div>
