--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
             <div class="row">
             	<div class="col-lg-8 col-lg-offset-2">
 					<ul class="list-inline">
-						<li><p><strong><a href="/project">Notre projet</a></strong></p></li>
-						<li><p><strong><a href="/">Nous soutenir</a></strong></p></li>
-                        <li><p><strong><a href="/">Blog</a></strong></p></li>
-						<li><p><strong><a href="/">Inscription</a></strong></p></li>
-                        <li><p><strong><a href="/contact">Nous contacter</a></strong></p></li>
+						<li><p><strong><a href="{{site.baseurl}}/project">Notre projet</a></strong></p></li>
+						<li><p><strong><a href="{{site.baseurl}}/">Nous soutenir</a></strong></p></li>
+                        <li><p><strong><a href="{{site.baseurl}}/">Blog</a></strong></p></li>
+						<li><p><strong><a href="{{site.baseurl}}/">Inscription</a></strong></p></li>
+                        <li><p><strong><a href="{{site.baseurl}}/contact">Nous contacter</a></strong></p></li>
 					</ul>
             	</div>
             </div>
@@ -26,10 +26,10 @@
 </footer>
 
 <!-- jQuery -->
-<script src="/public/js/jquery.min.js"></script>
+<script src="{{site.baseurl}}/public/js/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="/public/js/bootstrap.min.js"></script>
+<script src="{{site.baseurl}}/public/js/bootstrap.min.js"></script>
 
 
    <!-- <script src='/public/js/jquery.min.js'></script>
