--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,9 @@
   <title>{{page.title}}</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/public/css/bootstrap_flatly.min.css">
-  <link rel="stylesheet" href="/public/css/font-awesome.min.css">
-  <link rel='stylesheet' href="/public/css/fullcalendar.min.css">
-  <link rel="stylesheet" href="/public/css/styles.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/public/css/bootstrap_flatly.min.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/public/css/font-awesome.min.css">
+  <link rel='stylesheet' href="{{site.baseurl}}/public/css/fullcalendar.min.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/public/css/styles.css">
 
 </head>
