--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,11 +17,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/project">Notre projet</a></li>
-				<li><a href="/">Nous soutenir</a></li>
-				<li><a href="/">Blog</a></li>
-				<li><a href="/">Inscription</a></li>
-				<li><a href="/contact">Nous contacter</a></li>
+				<li><a href="{{site.baseurl}}/project">Notre projet</a></li>
+				<li><a href="{{site.baseurl}}/">Nous soutenir</a></li>
+				<li><a href="{{site.baseurl}}/">Blog</a></li>
+				<li><a href="{{site.baseurl}}/">Inscription</a></li>
+				<li><a href="{{site.baseurl}}/">Nous contacter</a></li>
 				<!--<li class="dropdown">
 			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
 			        	<span class="caret"></span>
