--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-				<img src="/public/img/logo.png">
+				<img src="{{site.baseurl}}/public/img/logo.png">
 			</a>
         </div>
 
@@ -21,7 +21,7 @@
 				<li><a href="{{site.baseurl}}/">Nous soutenir</a></li>
 				<li><a href="{{site.baseurl}}/">Blog</a></li>
 				<li><a href="{{site.baseurl}}/">Inscription</a></li>
-				<li><a href="{{site.baseurl}}/">Nous contacter</a></li>
+				<li><a href="{{site.baseurl}}/contact">Nous contacter</a></li>
 				<!--<li class="dropdown">
 			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
 			        	<span class="caret"></span>
