--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
             	<div class="col-lg-8 col-lg-offset-2">
 					<ul class="list-inline">
 						<li><p><strong><a href="{{site.baseurl}}/project">Notre projet</a></strong></p></li>
+                        <li><p><strong><a href="{{site.baseurl}}/">La charte</a></strong></p></li>
 						<li><p><strong><a href="{{site.baseurl}}/">Nous soutenir</a></strong></p></li>
                         <li><p><strong><a href="{{site.baseurl}}/">Blog</a></strong></p></li>
 						<li><p><strong><a href="{{site.baseurl}}/">Inscription</a></strong></p></li>
