--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <title>{{page.title}}</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{site.baseurl}}/public/css/bootstrap_flatly.min.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/public/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{site.baseurl}}/public/css/font-awesome.min.css">
   <link rel='stylesheet' href="{{site.baseurl}}/public/css/fullcalendar.min.css">
   <link rel="stylesheet" href="{{site.baseurl}}/public/css/styles.css">
