--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="text-center">
     <div class="footer-above">
-        <div class="container">
+        <!--<div class="container">
             <div class="row">
             	<div class="col-lg-8 col-lg-offset-2">
 					<ul class="list-inline">
@@ -13,7 +13,7 @@
 					</ul>
             	</div>
             </div>
-        </div>
+        </div>-->
    	</div>
    	<div class="footer-below">
         <div class="container">
@@ -25,21 +25,3 @@
         </div>
     </div>
 </footer>
-
-<!-- jQuery -->
-<script src="{{site.baseurl}}/public/js/jquery.min.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="{{site.baseurl}}/public/js/bootstrap.min.js"></script>
-
-
-   <!-- <script src='/public/js/jquery.min.js'></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
-	<script src='/public/js/moment.min.js'></script>
-	<script src='/public/js/fullcalendar.min.js'></script>
-
-	<script src="/public/js/mansory.min.js"></script>
-	<script src="/public/js/imagesloaded.min.js"></script>
-	<script src="/public/js/holder.min.js"></script>
-	<script src="/public/js/app.js"></script>-->
