--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <title>{{page.title}}</title>
 
   <!-- CSS -->
+  <link href='http://fonts.googleapis.com/css?family=Quicksand|Lato|Reenie+Beanie|Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{site.baseurl}}/public/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{site.baseurl}}/public/css/font-awesome.min.css">
   <link rel='stylesheet' href="{{site.baseurl}}/public/css/fullcalendar.min.css">
