--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,29 +17,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="{{site.baseurl}}/project">Notre projet</a></li>
+				<li><a href="{{site.baseurl}}/#association">L'association</a></li>
+				<li><a href="{{site.baseurl}}/#members">L'équipe</a></li>
+				<li><a href="{{site.baseurl}}/#objectives">Nos objectifs</a></li>
+				<li><a href="{{site.baseurl}}/#culture">Les valeurs</a></li>
+				<li><a href="{{site.baseurl}}/#contact">Nous contacter</a></li>
+				<!--<li><a href="{{site.baseurl}}/project">Notre projet</a></li>
 				<li><a href="{{site.baseurl}}/">Nous soutenir</a></li>
-				<li><a href="{{site.baseurl}}/">Blog</a></li>
+				<li><a href="{{site.baseurl}}/blog">Blog</a></li>
 				<li><a href="{{site.baseurl}}/">Inscription</a></li>
-				<li><a href="{{site.baseurl}}/contact">Nous contacter</a></li>
-				<!--<li class="dropdown">
-			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projets 
-			        	<span class="caret"></span>
-			        </a>
-			        <ul class="dropdown-menu" role="menu">
-				        <li><a href="#">Ateliers</a></li>
-				        <li><a href="#">Formations</a></li>
-			        </ul>
-			    </li>
-				<li class="dropdown">
-			        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Communauté 
-			        	<span class="caret"></span>
-			        </a>
-			        <ul class="dropdown-menu" role="menu">
-				        <li><a href="#">Les créatifs</a></li>
-				    </ul>
-			    </li>
-				-->
+				<li><a href="{{site.baseurl}}/contact">Nous contacter</a></li>-->
 			</ul>
 		</div>
 	</div>
