--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,9 +18,10 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="{{site.baseurl}}/#association">L'association</a></li>
-				<li><a href="{{site.baseurl}}/#members">L'équipe</a></li>
+				<li><a href="{{site.baseurl}}/#pourqui">Pour qui</a></li>
 				<li><a href="{{site.baseurl}}/#objectives">Nos objectifs</a></li>
 				<li><a href="{{site.baseurl}}/#culture">Les valeurs</a></li>
+				<li><a href="{{site.baseurl}}/#members">L'équipe</a></li>
 				<li><a href="{{site.baseurl}}/#contact">Nous contacter</a></li>
 				<!--<li><a href="{{site.baseurl}}/project">Notre projet</a></li>
 				<li><a href="{{site.baseurl}}/">Nous soutenir</a></li>
