--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,8 @@
 <footer class="text-center">
-    <div class="footer-above">
-        <!--<div class="container">
-            <div class="row">
-            	<div class="col-lg-8 col-lg-offset-2">
-					<ul class="list-inline">
-						<li><p><strong><a href="{{site.baseurl}}/project">Notre projet</a></strong></p></li>
-                        <li><p><strong><a href="{{site.baseurl}}/">La charte</a></strong></p></li>
-						<li><p><strong><a href="{{site.baseurl}}/">Nous soutenir</a></strong></p></li>
-                        <li><p><strong><a href="{{site.baseurl}}/">Blog</a></strong></p></li>
-						<li><p><strong><a href="{{site.baseurl}}/">Inscription</a></strong></p></li>
-                        <li><p><strong><a href="{{site.baseurl}}/contact">Nous contacter</a></strong></p></li>
-					</ul>
-            	</div>
-            </div>
-        </div>-->
-   	</div>
-   	<div class="footer-below">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    Copyright &copy; Créaphé 2015
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="text-muted">Copyright &copy; Créaphé 2015</p>
             </div>
         </div>
     </div>
