--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,20 +9,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{site.baseurl}}/">
-				<img src="{{site.baseurl}}/public/img/logo.png">
+            <a class="navbar-brand" href="{{site.baseurl}}">
+				<img src="{{site.baseurl}}public/img/logo.png">
 			</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="{{site.baseurl}}/#association">L'association</a></li>
-				<li><a href="{{site.baseurl}}/#pourqui">Pour qui</a></li>
-				<li><a href="{{site.baseurl}}/#objectives">Nos objectifs</a></li>
-				<li><a href="{{site.baseurl}}/#culture">Les valeurs</a></li>
-				<li><a href="{{site.baseurl}}/#members">L'équipe</a></li>
-				<li><a href="{{site.baseurl}}/#contact">Nous contacter</a></li>
+				<li><a href="{{site.baseurl}}#association">L'association</a></li>
+				<li><a href="{{site.baseurl}}#pourqui">Pour qui</a></li>
+				<li><a href="{{site.baseurl}}#objectives">Nos objectifs</a></li>
+				<li><a href="{{site.baseurl}}#culture">Les valeurs</a></li>
+				<li><a href="{{site.baseurl}}#members">L'équipe</a></li>
+				<li><a href="{{site.baseurl}}#contact">Nous contacter</a></li>
+				<li><a href="{{site.baseurl}}blog">Blog</a></li>
+				<li><a href="{{site.baseurl}}artist">Créateur</a></li>
 				<!--<li><a href="{{site.baseurl}}/project">Notre projet</a></li>
 				<li><a href="{{site.baseurl}}/">Nous soutenir</a></li>
 				<li><a href="{{site.baseurl}}/blog">Blog</a></li>
